--- a/conf/distro/minke.conf
+++ b/conf/distro/minke.conf
@@ -6,7 +6,8 @@ DISTRO_VERSION = "0.0.1"
 
 MAINTAINER = "tim <tim@minkebox.com>"
 
-POKY_DEFAULT_DISTRO_FEATURES += "virtualization systemd"
+POKY_DEFAULT_DISTRO_FEATURES = ""
+DISTRO_FEATURES_DEFAULT = "ext2 largefile usbhost wifi pci ptest virtualization systemd aufs"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 VIRTUAL-RUNTIME_initscripts = ""
