--- a/conf/distro/minke.conf
+++ b/conf/distro/minke.conf
@@ -12,3 +12,4 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 VIRTUAL-RUNTIME_initscripts = ""
 PACKAGECONFIG_append_systemd += " networkd"
+PACKAGE_CLASSES = "package_rpm"
