--- a/conf/distro/minke.conf
+++ b/conf/distro/minke.conf
@@ -7,9 +7,8 @@ DISTRO_VERSION = "0.0.1"
 MAINTAINER = "tim <tim@minkebox.com>"
 
 POKY_DEFAULT_DISTRO_FEATURES = ""
-DISTRO_FEATURES_DEFAULT = "ext2 largefile usbhost wifi pci ptest virtualization systemd aufs"
+DISTRO_FEATURES_DEFAULT = "ext2 largefile usbhost pci ptest virtualization systemd aufs"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 VIRTUAL-RUNTIME_initscripts = ""
-PACKAGECONFIG_append_systemd += " networkd"
 PACKAGE_CLASSES = "package_rpm"
