Support for Raspberry Pi 4

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "minke"
 BBFILE_PATTERN_minke = "^${LAYERDIR}/"
 BBFILE_PRIORITY_minke = "99"
 LAYERVERSION_minke = "1"
-LAYERSERIES_COMPAT_minke = "rocko thud"
+LAYERSERIES_COMPAT_minke = "rocko thud zeus"
