--- a/conf/distro/minke.conf
+++ b/conf/distro/minke.conf
@@ -7,7 +7,7 @@ DISTRO_VERSION = "0.0.1"
 MAINTAINER = "tim <tim@minkebox.com>"
 
 POKY_DEFAULT_DISTRO_FEATURES = ""
-DISTRO_FEATURES_DEFAULT = "ext2 largefile usbhost pci ptest virtualization systemd aufs"
+DISTRO_FEATURES_DEFAULT = "ext2 largefile usbhost pci ptest virtualization systemd aufs wifi"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 VIRTUAL-RUNTIME_initscripts = ""
