Tweak startup to make sure mDNS uses correct interface

--- a/recipes-config/systemd/systemd-networkd-wait-online.service
+++ b/recipes-config/systemd/systemd-networkd-wait-online.service
@@ -9,7 +9,7 @@ Before=network-online.target shutdown.target
 
 [Service]
 Type=oneshot
-ExecStart=/lib/systemd/systemd-networkd-wait-online --any
+ExecStart=/lib/systemd/systemd-networkd-wait-online --timeout 20
 RemainAfterExit=yes
 
 [Install]
