--- a/recipes-core/machine/raspberrypi3-64.conf
+++ b/recipes-core/machine/raspberrypi3-64.conf
@@ -1,3 +1,4 @@
 SDIMG_ROOTFS_TYPE = "ext4"
 IMAGE_FSTYPES = "rpi-sdimg.xz"
 PACKAGE_FEED_ARCHS = "raspberrypi3_64 aarch64 noarch"
+IMAGE_INSTALL += " rng-tools "
